--- a/docs/blocks/machines/compressor.mdx
+++ b/docs/blocks/machines/compressor.mdx
@@ -138,7 +138,7 @@ Main usage of **Compressor** is to make plates and compressed plant balls.
   "id": "brass_plate",
   "input": [
     {
-      "id": "techreborn:brass_ingot",
+      "id": "techreborn:bras_ingot",
       "qty": 1
     }
   ],
@@ -158,7 +158,7 @@ Main usage of **Compressor** is to make plates and compressed plant balls.
   "id": "brass_plate_from_block",
   "input": [
     {
-      "id": "techreborn:brass_storage_block",
+      "id": "techreborn:bras_storage_block",
       "qty": 1
     }
   ],
@@ -1036,7 +1036,7 @@ Main usage of **Compressor** is to make plates and compressed plant balls.
   ],
   "output": [
     {
-      "id": "minecraft:prismarine_bricks",
+      "id": "minecraft:prismarine_brick",
       "qty": 1
     }
   ],
@@ -1050,7 +1050,7 @@ Main usage of **Compressor** is to make plates and compressed plant balls.
   "id": "prismarine_shard",
   "input": [
     {
-      "id": "minecraft:prismarine_crystals",
+      "id": "minecraft:prismarine_crystal",
       "qty": 1
     }
   ],
