--- a/docs/blocks/machines/extractor.mdx
+++ b/docs/blocks/machines/extractor.mdx
@@ -166,7 +166,7 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   "id": "brown_dye_from_cocoa_beans",
   "input": [
     {
-      "id": "minecraft:cocoa_beans",
+      "id": "minecraft:cocoa_bean",
       "qty": 1
     }
   ],
@@ -841,13 +841,13 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   "id": "hanging_roots_from_mangrove_roots",
   "input": [
     {
-      "id": "minecraft:mangrove_roots",
+      "id": "minecraft:mangrove_root",
       "qty": 1
     }
   ],
   "output": [
     {
-      "id": "minecraft:hanging_roots",
+      "id": "minecraft:hanging_root",
       "qty": 1
     }
   ],
@@ -1007,13 +1007,13 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   "id": "mangrove_roots_from_muddy_mangrove_roots",
   "input": [
     {
-      "id": "minecraft:muddy_mangrove_roots",
+      "id": "minecraft:muddy_mangrove_root",
       "qty": 1
     }
   ],
   "output": [
     {
-      "id": "minecraft:mangrove_roots",
+      "id": "minecraft:mangrove_root",
       "qty": 1
     }
   ],
@@ -1049,7 +1049,7 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   "id": "orange_dye_from_glow_berries",
   "input": [
     {
-      "id": "minecraft:glow_berries",
+      "id": "minecraft:glow_berrie",
       "qty": 4
     }
   ],
@@ -1335,7 +1335,7 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   "id": "pink_dye_from_pink_petals",
   "input": [
     {
-      "id": "minecraft:pink_petals",
+      "id": "minecraft:pink_petal",
       "qty": 1
     }
   ],
@@ -1376,13 +1376,13 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   "id": "pink_petals_from_cherry_leaves",
   "input": [
     {
-      "id": "minecraft:cherry_leaves",
+      "id": "minecraft:cherry_leave",
       "qty": 1
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_petals",
+      "id": "minecraft:pink_petal",
       "qty": 4
     }
   ],
@@ -1641,7 +1641,7 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   "id": "red_dye_from_sweet_berries",
   "input": [
     {
-      "id": "minecraft:sweet_berries",
+      "id": "minecraft:sweet_berrie",
       "qty": 4
     }
   ],
@@ -1664,7 +1664,7 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   "id": "rubber_from_log",
   "input": [
     {
-      "id": "techreborn:rubber_logs",
+      "id": "techreborn:rubber_log",
       "qty": 1
     }
   ],
@@ -1873,7 +1873,7 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   "id": "string_from_banner",
   "input": [
     {
-      "id": "minecraft:banners",
+      "id": "minecraft:banner",
       "qty": 1
     }
   ],
@@ -1893,7 +1893,7 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   "id": "string_from_bed",
   "input": [
     {
-      "id": "minecraft:beds",
+      "id": "minecraft:bed",
       "qty": 1
     }
   ],
@@ -1991,7 +1991,7 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   }
 }} />
 <details>
-				<summary><McItem slug="minecraft:wheat_seeds" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "wheat_seeds_from_fern",
   "input": [
@@ -2002,7 +2002,7 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   ],
   "output": [
     {
-      "id": "minecraft:wheat_seeds",
+      "id": "minecraft:wheat_seed",
       "qty": 1
     }
   ],
@@ -2016,13 +2016,13 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   "id": "wheat_seeds_from_short_grass",
   "input": [
     {
-      "id": "minecraft:short_grass",
+      "id": "minecraft:short_gras",
       "qty": 1
     }
   ],
   "output": [
     {
-      "id": "minecraft:wheat_seeds",
+      "id": "minecraft:wheat_seed",
       "qty": 1
     }
   ],
