--- a/docs/blocks/machines/grinder.mdx
+++ b/docs/blocks/machines/grinder.mdx
@@ -233,7 +233,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "brass_dust",
   "input": [
     {
-      "id": "techreborn:brass_ingot",
+      "id": "techreborn:bras_ingot",
       "qty": 1
     }
   ],
@@ -253,7 +253,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "brass_dust_from_block",
   "input": [
     {
-      "id": "techreborn:brass_storage_block",
+      "id": "techreborn:bras_storage_block",
       "qty": 1
     }
   ],
@@ -671,7 +671,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "diamond_small_dust",
   "input": [
     {
-      "id": "techreborn:trim_templates",
+      "id": "techreborn:trim_template",
       "qty": 1
     }
   ],
@@ -977,7 +977,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "glowstone_small_dust_2",
   "input": [
     {
-      "id": "minecraft:glow_berries",
+      "id": "minecraft:glow_berrie",
       "qty": 4
     }
   ],
@@ -1284,7 +1284,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "netherite_scrap",
   "input": [
     {
-      "id": "minecraft:ancient_debris",
+      "id": "minecraft:ancient_debri",
       "qty": 1
     }
   ],
@@ -1573,7 +1573,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:prismarine_crystals" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "prismarine_crystals",
   "input": [
@@ -1584,7 +1584,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   ],
   "output": [
     {
-      "id": "minecraft:prismarine_crystals",
+      "id": "minecraft:prismarine_crystal",
       "qty": 2
     }
   ],
@@ -1604,7 +1604,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   ],
   "output": [
     {
-      "id": "minecraft:prismarine_crystals",
+      "id": "minecraft:prismarine_crystal",
       "qty": 4
     }
   ],
@@ -1621,7 +1621,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "prismarine_shard",
   "input": [
     {
-      "id": "minecraft:prismarine_bricks",
+      "id": "minecraft:prismarine_brick",
       "qty": 1
     }
   ],
@@ -2542,7 +2542,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "saw_small_dust_from_signs",
   "input": [
     {
-      "id": "minecraft:signs",
+      "id": "minecraft:oak_sign",
       "qty": 1
     }
   ],
@@ -2582,7 +2582,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "saw_small_dust_from_wooden_doors",
   "input": [
     {
-      "id": "minecraft:wooden_doors",
+      "id": "minecraft:oak_wood_door",
       "qty": 1
     }
   ],
@@ -2602,7 +2602,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "saw_small_dust_from_wooden_fences",
   "input": [
     {
-      "id": "minecraft:wooden_fences",
+      "id": "minecraft:oak_fence",
       "qty": 1
     }
   ],
@@ -2642,7 +2642,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "saw_small_dust_from_wooden_pressure_plates",
   "input": [
     {
-      "id": "minecraft:wooden_pressure_plates",
+      "id": "minecraft:oak_pressure_plate",
       "qty": 1
     }
   ],
@@ -2662,7 +2662,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "saw_small_dust_from_wooden_slabs",
   "input": [
     {
-      "id": "minecraft:wooden_slabs",
+      "id": "minecraft:wooden_slab",
       "qty": 1
     }
   ],
@@ -2702,7 +2702,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "saw_small_dust_from_wooden_trapdoors",
   "input": [
     {
-      "id": "minecraft:wooden_trapdoors",
+      "id": "minecraft:oak_trapdoor",
       "qty": 1
     }
   ],
