--- a/docs/blocks/machines/industrial_centrifuge.mdx
+++ b/docs/blocks/machines/industrial_centrifuge.mdx
@@ -131,7 +131,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   "id": "brass_dust",
   "input": [
     {
-      "id": "techreborn:brass_dust",
+      "id": "techreborn:bras_dust",
       "qty": 4
     }
   ],
@@ -301,7 +301,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
       "qty": 6
     },
     {
-      "id": "minecraft:crimson_fungus",
+      "id": "minecraft:crimson_fungu",
       "qty": 2
     }
   ],
@@ -563,7 +563,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   "id": "glow_berries",
   "input": [
     {
-      "id": "minecraft:glow_berries",
+      "id": "minecraft:glow_berrie",
       "qty": 32
     },
     {
@@ -1313,7 +1313,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
       "qty": 2
     },
     {
-      "id": "minecraft:hanging_roots",
+      "id": "minecraft:hanging_root",
       "qty": 7
     }
   ],
@@ -1503,7 +1503,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   "id": "sweet_berries",
   "input": [
     {
-      "id": "minecraft:sweet_berries",
+      "id": "minecraft:sweet_berrie",
       "qty": 32
     },
     {
@@ -1601,7 +1601,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
       "qty": 6
     },
     {
-      "id": "minecraft:warped_fungus",
+      "id": "minecraft:warped_fungu",
       "qty": 2
     }
   ],
