--- a/docs/blocks/machines/machines.mdx
+++ b/docs/blocks/machines/machines.mdx
@@ -42,7 +42,7 @@ Tech Reborn has several tiers of different kind of machines:
 - <McItem slug="techreborn:industrial_blast_furnace"/>
 - <McItem slug="techreborn:industrial_electrolyzer"/>
 - <McItem slug="techreborn:industrial_grinder"/>
-- <McItem slug="techreborn:saw_mill"/>
+- <McItem slug="techreborn:industrial_sawmill"/>
 - <McItem slug="techreborn:vacuum_freezer"/>
 - <McItem slug="techreborn:pump"/>
 - <McItem slug="techreborn:fishing_station"/>
