--- a/docs/blocks/machines/chemical_reactor.mdx
+++ b/docs/blocks/machines/chemical_reactor.mdx
@@ -195,7 +195,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:black_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "black_stained_glass_from_glass_with_black_dye",
   "input": [
@@ -204,13 +204,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:black_stained_glass",
+      "id": "minecraft:black_stained_glas",
       "qty": 12
     }
   ],
@@ -228,13 +228,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:gray_stained_glass",
+      "id": "minecraft:gray_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:black_stained_glass",
+      "id": "minecraft:black_stained_glas",
       "qty": 12
     }
   ],
@@ -768,7 +768,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:blue_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "blue_stained_glass_from_cyan_stained_glass_with_blue_dye",
   "input": [
@@ -777,13 +777,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:cyan_stained_glass",
+      "id": "minecraft:cyan_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:blue_stained_glass",
+      "id": "minecraft:blue_stained_glas",
       "qty": 12
     }
   ],
@@ -801,13 +801,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:cyan_stained_glass",
+      "id": "minecraft:cyan_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:blue_stained_glass",
+      "id": "minecraft:blue_stained_glas",
       "qty": 12
     }
   ],
@@ -825,13 +825,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:blue_stained_glass",
+      "id": "minecraft:blue_stained_glas",
       "qty": 12
     }
   ],
@@ -849,13 +849,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:gray_stained_glass",
+      "id": "minecraft:gray_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:blue_stained_glass",
+      "id": "minecraft:blue_stained_glas",
       "qty": 12
     }
   ],
@@ -873,13 +873,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_blue_stained_glass",
+      "id": "minecraft:light_blue_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:blue_stained_glass",
+      "id": "minecraft:blue_stained_glas",
       "qty": 12
     }
   ],
@@ -1725,7 +1725,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:brown_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "brown_stained_glass_from_black_stained_glass_with_orange_dye",
   "input": [
@@ -1734,13 +1734,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:black_stained_glass",
+      "id": "minecraft:black_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:brown_stained_glass",
+      "id": "minecraft:brown_stained_glas",
       "qty": 12
     }
   ],
@@ -1758,13 +1758,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:brown_stained_glass",
+      "id": "minecraft:brown_stained_glas",
       "qty": 12
     }
   ],
@@ -1782,13 +1782,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:green_stained_glass",
+      "id": "minecraft:green_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:brown_stained_glass",
+      "id": "minecraft:brown_stained_glas",
       "qty": 12
     }
   ],
@@ -1806,13 +1806,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:orange_stained_glass",
+      "id": "minecraft:orange_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:brown_stained_glass",
+      "id": "minecraft:brown_stained_glas",
       "qty": 12
     }
   ],
@@ -1830,13 +1830,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:orange_stained_glass",
+      "id": "minecraft:orange_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:brown_stained_glass",
+      "id": "minecraft:brown_stained_glas",
       "qty": 12
     }
   ],
@@ -1854,13 +1854,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:red_stained_glass",
+      "id": "minecraft:red_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:brown_stained_glass",
+      "id": "minecraft:brown_stained_glas",
       "qty": 12
     }
   ],
@@ -2634,7 +2634,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:cyan_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "cyan_stained_glass_from_blue_stained_glass_with_green_dye",
   "input": [
@@ -2643,13 +2643,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:blue_stained_glass",
+      "id": "minecraft:blue_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:cyan_stained_glass",
+      "id": "minecraft:cyan_stained_glas",
       "qty": 12
     }
   ],
@@ -2667,13 +2667,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:cyan_stained_glass",
+      "id": "minecraft:cyan_stained_glas",
       "qty": 12
     }
   ],
@@ -2691,13 +2691,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:green_stained_glass",
+      "id": "minecraft:green_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:cyan_stained_glass",
+      "id": "minecraft:cyan_stained_glas",
       "qty": 12
     }
   ],
@@ -2715,13 +2715,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_blue_stained_glass",
+      "id": "minecraft:light_blue_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:cyan_stained_glass",
+      "id": "minecraft:cyan_stained_glas",
       "qty": 12
     }
   ],
@@ -3133,7 +3133,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 3
     },
     {
-      "id": "minecraft:prismarine_crystals",
+      "id": "minecraft:prismarine_crystal",
       "qty": 2
     }
   ],
@@ -3591,7 +3591,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:gray_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "gray_stained_glass_from_black_stained_glass_with_light_gray_dye",
   "input": [
@@ -3600,13 +3600,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:black_stained_glass",
+      "id": "minecraft:black_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:gray_stained_glass",
+      "id": "minecraft:gray_stained_glas",
       "qty": 12
     }
   ],
@@ -3624,13 +3624,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:black_stained_glass",
+      "id": "minecraft:black_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:gray_stained_glass",
+      "id": "minecraft:gray_stained_glas",
       "qty": 12
     }
   ],
@@ -3648,13 +3648,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:gray_stained_glass",
+      "id": "minecraft:gray_stained_glas",
       "qty": 12
     }
   ],
@@ -3672,13 +3672,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_gray_stained_glass",
+      "id": "minecraft:light_gray_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:gray_stained_glass",
+      "id": "minecraft:gray_stained_glas",
       "qty": 12
     }
   ],
@@ -3696,13 +3696,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_gray_stained_glass",
+      "id": "minecraft:light_gray_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:gray_stained_glass",
+      "id": "minecraft:gray_stained_glas",
       "qty": 12
     }
   ],
@@ -3720,13 +3720,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glass",
+      "id": "minecraft:white_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:gray_stained_glass",
+      "id": "minecraft:gray_stained_glas",
       "qty": 12
     }
   ],
@@ -4572,7 +4572,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:green_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "green_stained_glass_from_blue_stained_glass_with_yellow_dye",
   "input": [
@@ -4581,13 +4581,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:blue_stained_glass",
+      "id": "minecraft:blue_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:green_stained_glass",
+      "id": "minecraft:green_stained_glas",
       "qty": 12
     }
   ],
@@ -4605,13 +4605,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:green_stained_glass",
+      "id": "minecraft:green_stained_glas",
       "qty": 12
     }
   ],
@@ -4629,13 +4629,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:gray_stained_glass",
+      "id": "minecraft:gray_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:green_stained_glass",
+      "id": "minecraft:green_stained_glas",
       "qty": 12
     }
   ],
@@ -4653,13 +4653,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:lime_stained_glass",
+      "id": "minecraft:lime_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:green_stained_glass",
+      "id": "minecraft:green_stained_glas",
       "qty": 12
     }
   ],
@@ -4677,13 +4677,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:lime_stained_glass",
+      "id": "minecraft:lime_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:green_stained_glass",
+      "id": "minecraft:green_stained_glas",
       "qty": 12
     }
   ],
@@ -4701,13 +4701,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:yellow_stained_glass",
+      "id": "minecraft:yellow_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:green_stained_glass",
+      "id": "minecraft:green_stained_glas",
       "qty": 12
     }
   ],
@@ -5673,7 +5673,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:light_blue_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "light_blue_stained_glass_from_blue_stained_glass_with_light_gray_dye",
   "input": [
@@ -5682,13 +5682,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:blue_stained_glass",
+      "id": "minecraft:blue_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glass",
+      "id": "minecraft:light_blue_stained_glas",
       "qty": 12
     }
   ],
@@ -5706,13 +5706,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:blue_stained_glass",
+      "id": "minecraft:blue_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glass",
+      "id": "minecraft:light_blue_stained_glas",
       "qty": 12
     }
   ],
@@ -5730,13 +5730,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:cyan_stained_glass",
+      "id": "minecraft:cyan_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glass",
+      "id": "minecraft:light_blue_stained_glas",
       "qty": 12
     }
   ],
@@ -5754,13 +5754,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glass",
+      "id": "minecraft:light_blue_stained_glas",
       "qty": 12
     }
   ],
@@ -5778,13 +5778,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_gray_stained_glass",
+      "id": "minecraft:light_gray_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glass",
+      "id": "minecraft:light_blue_stained_glas",
       "qty": 12
     }
   ],
@@ -5802,13 +5802,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_gray_stained_glass",
+      "id": "minecraft:light_gray_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glass",
+      "id": "minecraft:light_blue_stained_glas",
       "qty": 12
     }
   ],
@@ -5826,13 +5826,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_gray_stained_glass",
+      "id": "minecraft:light_gray_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glass",
+      "id": "minecraft:light_blue_stained_glas",
       "qty": 12
     }
   ],
@@ -5850,13 +5850,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glass",
+      "id": "minecraft:white_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glass",
+      "id": "minecraft:light_blue_stained_glas",
       "qty": 12
     }
   ],
@@ -6552,7 +6552,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
   }
 }} />
 <details>
-				<summary><McItem slug="minecraft:light_gray_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "light_gray_stained_glass_from_glass_with_light_gray_dye",
   "input": [
@@ -6561,13 +6561,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_gray_stained_glass",
+      "id": "minecraft:light_gray_stained_glas",
       "qty": 12
     }
   ],
@@ -6585,13 +6585,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:gray_stained_glass",
+      "id": "minecraft:gray_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_gray_stained_glass",
+      "id": "minecraft:light_gray_stained_glas",
       "qty": 12
     }
   ],
@@ -6609,13 +6609,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glass",
+      "id": "minecraft:white_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_gray_stained_glass",
+      "id": "minecraft:light_gray_stained_glas",
       "qty": 12
     }
   ],
@@ -6633,13 +6633,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glass",
+      "id": "minecraft:white_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_gray_stained_glass",
+      "id": "minecraft:light_gray_stained_glas",
       "qty": 12
     }
   ],
@@ -7290,7 +7290,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:lime_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "lime_stained_glass_from_cyan_stained_glass_with_yellow_dye",
   "input": [
@@ -7299,13 +7299,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:cyan_stained_glass",
+      "id": "minecraft:cyan_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glass",
+      "id": "minecraft:lime_stained_glas",
       "qty": 12
     }
   ],
@@ -7323,13 +7323,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glass",
+      "id": "minecraft:lime_stained_glas",
       "qty": 12
     }
   ],
@@ -7347,13 +7347,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:green_stained_glass",
+      "id": "minecraft:green_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glass",
+      "id": "minecraft:lime_stained_glas",
       "qty": 12
     }
   ],
@@ -7371,13 +7371,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_blue_stained_glass",
+      "id": "minecraft:light_blue_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glass",
+      "id": "minecraft:lime_stained_glas",
       "qty": 12
     }
   ],
@@ -7395,13 +7395,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glass",
+      "id": "minecraft:white_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glass",
+      "id": "minecraft:lime_stained_glas",
       "qty": 12
     }
   ],
@@ -7419,13 +7419,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:yellow_stained_glass",
+      "id": "minecraft:yellow_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glass",
+      "id": "minecraft:lime_stained_glas",
       "qty": 12
     }
   ],
@@ -7443,13 +7443,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:yellow_stained_glass",
+      "id": "minecraft:yellow_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glass",
+      "id": "minecraft:lime_stained_glas",
       "qty": 12
     }
   ],
@@ -8295,7 +8295,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:magenta_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "magenta_stained_glass_from_glass_with_magenta_dye",
   "input": [
@@ -8304,13 +8304,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:magenta_stained_glass",
+      "id": "minecraft:magenta_stained_glas",
       "qty": 12
     }
   ],
@@ -8328,13 +8328,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:gray_stained_glass",
+      "id": "minecraft:gray_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:magenta_stained_glass",
+      "id": "minecraft:magenta_stained_glas",
       "qty": 12
     }
   ],
@@ -8352,13 +8352,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:pink_stained_glass",
+      "id": "minecraft:pink_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:magenta_stained_glass",
+      "id": "minecraft:magenta_stained_glas",
       "qty": 12
     }
   ],
@@ -8376,13 +8376,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:pink_stained_glass",
+      "id": "minecraft:pink_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:magenta_stained_glass",
+      "id": "minecraft:magenta_stained_glas",
       "qty": 12
     }
   ],
@@ -8400,13 +8400,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:purple_stained_glass",
+      "id": "minecraft:purple_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:magenta_stained_glass",
+      "id": "minecraft:magenta_stained_glas",
       "qty": 12
     }
   ],
@@ -9180,7 +9180,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:orange_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "orange_stained_glass_from_glass_with_orange_dye",
   "input": [
@@ -9189,13 +9189,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:orange_stained_glass",
+      "id": "minecraft:orange_stained_glas",
       "qty": 12
     }
   ],
@@ -9213,13 +9213,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:pink_stained_glass",
+      "id": "minecraft:pink_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:orange_stained_glass",
+      "id": "minecraft:orange_stained_glas",
       "qty": 12
     }
   ],
@@ -9237,13 +9237,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:yellow_stained_glass",
+      "id": "minecraft:yellow_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:orange_stained_glass",
+      "id": "minecraft:orange_stained_glas",
       "qty": 12
     }
   ],
@@ -9801,7 +9801,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:pink_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "pink_stained_glass_from_glass_with_pink_dye",
   "input": [
@@ -9810,13 +9810,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glass",
+      "id": "minecraft:pink_stained_glas",
       "qty": 12
     }
   ],
@@ -9834,13 +9834,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_gray_stained_glass",
+      "id": "minecraft:light_gray_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glass",
+      "id": "minecraft:pink_stained_glas",
       "qty": 12
     }
   ],
@@ -9858,13 +9858,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:magenta_stained_glass",
+      "id": "minecraft:magenta_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glass",
+      "id": "minecraft:pink_stained_glas",
       "qty": 12
     }
   ],
@@ -9882,13 +9882,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:magenta_stained_glass",
+      "id": "minecraft:magenta_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glass",
+      "id": "minecraft:pink_stained_glas",
       "qty": 12
     }
   ],
@@ -9906,13 +9906,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:red_stained_glass",
+      "id": "minecraft:red_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glass",
+      "id": "minecraft:pink_stained_glas",
       "qty": 12
     }
   ],
@@ -9930,13 +9930,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glass",
+      "id": "minecraft:white_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glass",
+      "id": "minecraft:pink_stained_glas",
       "qty": 12
     }
   ],
@@ -9954,13 +9954,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glass",
+      "id": "minecraft:white_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glass",
+      "id": "minecraft:pink_stained_glas",
       "qty": 12
     }
   ],
@@ -10854,7 +10854,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:purple_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "purple_stained_glass_from_blue_stained_glass_with_magenta_dye",
   "input": [
@@ -10863,13 +10863,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:blue_stained_glass",
+      "id": "minecraft:blue_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:purple_stained_glass",
+      "id": "minecraft:purple_stained_glas",
       "qty": 12
     }
   ],
@@ -10887,13 +10887,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:blue_stained_glass",
+      "id": "minecraft:blue_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:purple_stained_glass",
+      "id": "minecraft:purple_stained_glas",
       "qty": 12
     }
   ],
@@ -10911,13 +10911,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:purple_stained_glass",
+      "id": "minecraft:purple_stained_glas",
       "qty": 12
     }
   ],
@@ -10935,13 +10935,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:magenta_stained_glass",
+      "id": "minecraft:magenta_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:purple_stained_glass",
+      "id": "minecraft:purple_stained_glas",
       "qty": 12
     }
   ],
@@ -10959,13 +10959,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:magenta_stained_glass",
+      "id": "minecraft:magenta_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:purple_stained_glass",
+      "id": "minecraft:purple_stained_glas",
       "qty": 12
     }
   ],
@@ -10983,13 +10983,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:red_stained_glass",
+      "id": "minecraft:red_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:purple_stained_glass",
+      "id": "minecraft:purple_stained_glas",
       "qty": 12
     }
   ],
@@ -11739,7 +11739,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:red_stained_glass" /></summary>
+				<summary><McItem slug="minecraft:missing_asset" /></summary>
 				<Machine config={{
   "id": "red_stained_glass_from_glass_with_red_dye",
   "input": [
@@ -11748,13 +11748,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:red_stained_glass",
+      "id": "minecraft:red_stained_glas",
       "qty": 12
     }
   ],
@@ -11772,13 +11772,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:magenta_stained_glass",
+      "id": "minecraft:magenta_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:red_stained_glass",
+      "id": "minecraft:red_stained_glas",
       "qty": 12
     }
   ],
@@ -11796,13 +11796,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:orange_stained_glass",
+      "id": "minecraft:orange_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:red_stained_glass",
+      "id": "minecraft:red_stained_glas",
       "qty": 12
     }
   ],
@@ -11820,13 +11820,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:pink_stained_glass",
+      "id": "minecraft:pink_stained_glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:red_stained_glass",
+      "id": "minecraft:red_stained_glas",
       "qty": 12
     }
   ],
@@ -12186,7 +12186,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
   "id": "sea_lantern",
   "input": [
     {
-      "id": "minecraft:prismarine_crystals",
+      "id": "minecraft:prismarine_crystal",
       "qty": 6
     },
     {
@@ -12841,13 +12841,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:white_stained_glass",
+      "id": "minecraft:white_stained_glas",
       "qty": 12
     }
   ],
@@ -13009,13 +13009,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glass",
+      "id": "minecraft:glas",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:yellow_stained_glass",
+      "id": "minecraft:yellow_stained_glas",
       "qty": 12
     }
   ],
