--- a/docs/blocks/machines/industrial_grinder.mdx
+++ b/docs/blocks/machines/industrial_grinder.mdx
@@ -224,7 +224,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "diamond_dust_from_boots_with_mercury",
   "input": [
     {
-      "id": "minecraft:diamond_boots",
+      "id": "minecraft:diamond_boot",
       "qty": 1
     }
   ],
@@ -252,7 +252,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "diamond_dust_from_boots_with_water",
   "input": [
     {
-      "id": "minecraft:diamond_boots",
+      "id": "minecraft:diamond_boot",
       "qty": 1
     }
   ],
@@ -516,7 +516,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "diamond_dust_from_leggings_with_mercury",
   "input": [
     {
-      "id": "minecraft:diamond_leggings",
+      "id": "minecraft:diamond_legging",
       "qty": 1
     }
   ],
@@ -544,7 +544,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "diamond_dust_from_leggings_with_water",
   "input": [
     {
-      "id": "minecraft:diamond_leggings",
+      "id": "minecraft:diamond_legging",
       "qty": 1
     }
   ],
@@ -604,7 +604,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "diamond_dust_from_smithing_template_with_mercury",
   "input": [
     {
-      "id": "techreborn:trim_templates",
+      "id": "techreborn:trim_template",
       "qty": 1
     }
   ],
@@ -632,7 +632,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "diamond_dust_from_smithing_template_with_water",
   "input": [
     {
-      "id": "techreborn:trim_templates",
+      "id": "techreborn:trim_template",
       "qty": 1
     }
   ],
@@ -1080,7 +1080,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "endstone_dust_from_end_stone_bricks_with_water",
   "input": [
     {
-      "id": "minecraft:end_stone_bricks",
+      "id": "minecraft:end_stone_brick",
       "qty": 1
     }
   ],
@@ -1246,7 +1246,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "netherite_scrap_from_ancient_debris_with_mercury",
   "input": [
     {
-      "id": "minecraft:ancient_debris",
+      "id": "minecraft:ancient_debri",
       "qty": 1
     }
   ],
@@ -1274,7 +1274,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "netherite_scrap_from_ancient_debris_with_water",
   "input": [
     {
-      "id": "minecraft:ancient_debris",
+      "id": "minecraft:ancient_debri",
       "qty": 1
     }
   ],
@@ -1483,7 +1483,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "peridot_dust_from_boots_with_mercury",
   "input": [
     {
-      "id": "techreborn:peridot_boots",
+      "id": "techreborn:peridot_boot",
       "qty": 1
     }
   ],
@@ -1511,7 +1511,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "peridot_dust_from_boots_with_water",
   "input": [
     {
-      "id": "techreborn:peridot_boots",
+      "id": "techreborn:peridot_boot",
       "qty": 1
     }
   ],
@@ -1683,7 +1683,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "peridot_dust_from_leggings_with_mercury",
   "input": [
     {
-      "id": "techreborn:peridot_leggings",
+      "id": "techreborn:peridot_legging",
       "qty": 1
     }
   ],
@@ -1711,7 +1711,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "peridot_dust_from_leggings_with_water",
   "input": [
     {
-      "id": "techreborn:peridot_leggings",
+      "id": "techreborn:peridot_legging",
       "qty": 1
     }
   ],
@@ -2080,7 +2080,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   ],
   "output": [
     {
-      "id": "minecraft:prismarine_crystals",
+      "id": "minecraft:prismarine_crystal",
       "qty": 3
     },
     {
@@ -2684,7 +2684,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "ruby_dust_from_boots_with_mercury",
   "input": [
     {
-      "id": "techreborn:ruby_boots",
+      "id": "techreborn:ruby_boot",
       "qty": 1
     }
   ],
@@ -2712,7 +2712,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "ruby_dust_from_boots_with_water",
   "input": [
     {
-      "id": "techreborn:ruby_boots",
+      "id": "techreborn:ruby_boot",
       "qty": 1
     }
   ],
@@ -2884,7 +2884,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "ruby_dust_from_leggings_with_mercury",
   "input": [
     {
-      "id": "techreborn:ruby_leggings",
+      "id": "techreborn:ruby_legging",
       "qty": 1
     }
   ],
@@ -2912,7 +2912,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "ruby_dust_from_leggings_with_water",
   "input": [
     {
-      "id": "techreborn:ruby_leggings",
+      "id": "techreborn:ruby_legging",
       "qty": 1
     }
   ],
@@ -3242,7 +3242,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "sapphire_dust_from_boots_with_mercury",
   "input": [
     {
-      "id": "techreborn:sapphire_boots",
+      "id": "techreborn:sapphire_boot",
       "qty": 1
     }
   ],
@@ -3270,7 +3270,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "sapphire_dust_from_boots_with_water",
   "input": [
     {
-      "id": "techreborn:sapphire_boots",
+      "id": "techreborn:sapphire_boot",
       "qty": 1
     }
   ],
@@ -3442,7 +3442,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "sapphire_dust_from_leggings_with_mercury",
   "input": [
     {
-      "id": "techreborn:sapphire_leggings",
+      "id": "techreborn:sapphire_legging",
       "qty": 1
     }
   ],
@@ -3470,7 +3470,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "sapphire_dust_from_leggings_with_water",
   "input": [
     {
-      "id": "techreborn:sapphire_leggings",
+      "id": "techreborn:sapphire_legging",
       "qty": 1
     }
   ],
