adding support for vacuum freezer and wire mill

--- a/docs/blocks/machines/vacuum_freezer.mdx
+++ b/docs/blocks/machines/vacuum_freezer.mdx
@@ -23,3 +23,88 @@ The **Vacuum Freezer** has a button in the GUI that can be used to show a hologr
 The machine has 1 input and 1 output, supports upgrades, and uses a standard slot configuration.
 
 <img src="/img/blocks/freezer3.png" alt="Vacuum Freezer GUI" width="400"/>
+### Crafting Recipes
+		<details>
+			<summary>Recipes using Vacuum Freezer</summary>
+			<Machine config={{
+  "id": "blue_ice",
+  "input": [
+    {
+      "id": "minecraft:packed_ice",
+      "qty": 4
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:blue_ice",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:vacuum_freezer",
+  "meta": {
+    "power": 60,
+    "time": 64
+  }
+}} />
+<Machine config={{
+  "id": "cell",
+  "input": [
+    {
+      "id": "techreborn:heliumplasma_cell",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:helium_cell",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:vacuum_freezer",
+  "meta": {
+    "power": 60,
+    "time": 400
+  }
+}} />
+<Machine config={{
+  "id": "packed_ice",
+  "input": [
+    {
+      "id": "minecraft:ice",
+      "qty": 2
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:packed_ice",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:vacuum_freezer",
+  "meta": {
+    "power": 60,
+    "time": 64
+  }
+}} />
+<Machine config={{
+  "id": "tungstensteel_ingot",
+  "input": [
+    {
+      "id": "techreborn:hot_tungstensteel_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:tungstensteel_ingot",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:vacuum_freezer",
+  "meta": {
+    "power": 60,
+    "time": 440
+  }
+}} />
+
+		</details>
