--- a/docs/blocks/machines/wire_mill.mdx
+++ b/docs/blocks/machines/wire_mill.mdx
@@ -12,10 +12,89 @@ The **Wire Mill** is a machine that is used to produce more cables per ingot. Th
 
 <CraftingTable recipe="input techreborn:brass_plate techreborn:extractor techreborn:brass_plate input techreborn:electronic_circuit techreborn:basic_machine_frame techreborn:electronic_circuit input techreborn:brass_plate minecraft:piston techreborn:brass_plate output techreborn:wire_mill" />
 
-## Usage
 
-Machine recipes:  
-<McItem slug="techreborn:copper_ingot" inline={true}/> → 6x <McItem slug="techreborn:copper_cable" inline={true}/>  
-<McItem slug="minecraft:gold_ingot" inline={true}/> → 6x <McItem slug="techreborn:gold_cable" inline={true}/>  
-<McItem slug="techreborn:refined_iron_ingot" inline={true}/> → 6x <McItem slug="techreborn:HV_cable" inline={true}/>  
-<McItem slug="techreborn:tin_ingot" inline={true}/> → 6x <McItem slug="techreborn:tin_cable" inline={true}/>
+### Crafting Recipes
+		<details>
+			<summary>Recipes using Wire Mill</summary>
+			<Machine config={{
+  "id": "copper_cable",
+  "input": [
+    {
+      "id": "minecraft:copper_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:copper_cable",
+      "qty": 6
+    }
+  ],
+  "tool": "techreborn:wire_mill",
+  "meta": {
+    "power": 2,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "id": "gold_cable",
+  "input": [
+    {
+      "id": "minecraft:gold_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:gold_cable",
+      "qty": 6
+    }
+  ],
+  "tool": "techreborn:wire_mill",
+  "meta": {
+    "power": 2,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "id": "hv_cable",
+  "input": [
+    {
+      "id": "techreborn:refined_iron_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:hv_cable",
+      "qty": 6
+    }
+  ],
+  "tool": "techreborn:wire_mill",
+  "meta": {
+    "power": 2,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "id": "tin_cable",
+  "input": [
+    {
+      "id": "techreborn:tin_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:tin_cable",
+      "qty": 6
+    }
+  ],
+  "tool": "techreborn:wire_mill",
+  "meta": {
+    "power": 2,
+    "time": 200
+  }
+}} />
+
+		</details>
